[workspace]
members = [
    "statefun-proto",
    "statefun-sdk",
    "examples/greeter/statefun-greeter-example",
    "examples/greeter/statefun-greeter-example-proto",
    "examples/kafka/statefun-kafka-example",
    "examples/kafka/statefun-kafka-example-proto",
    "examples/timeouts/statefun-timeout-example",
    "examples/timeouts/statefun-timeout-example-proto",
]
