[package]
name = "statefun-example"
version = "0.1.0"
authors = ["Aljoscha Krettek <aljoscha.krettek@gmail.com>"]
readme = "../README.md"
edition = "2018"
license = "MIT"

description = "An example that shows how to use the Statefun Rust SDK"

documentation = "https://docs.rs/statefun/"
homepage = "https://github.com/aljoscha/statefun-rust"
repository = "https://github.com/aljoscha/statefun-rust.git"

[dependencies]
failure = "0.1.5"
exitfailure = "0.5.1"
log = "0.4.8"
env_logger = "0.7.1"
statefun = { path = "../statefun-sdk", version = "0.1.0" }
statefun-example-proto = { path = "../statefun-example-proto", version = "0.1.0" }
protobuf = "2.15"
