[package]
name = "statefun-example"
version = "0.1.1"
authors = ["Aljoscha Krettek <aljoscha.krettek@gmail.com>"]
readme = "../README.md"
edition = "2018"
license = "MIT"

description = "An example that shows how to use the Statefun Rust SDK"

documentation = "https://docs.rs/statefun/"
homepage = "https://github.com/aljoscha/statefun-rust"
repository = "https://github.com/aljoscha/statefun-rust.git"

[dependencies]
anyhow = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
statefun = { path = "../statefun-sdk", version = "0.1.1" }
statefun-example-proto = { path = "../statefun-example-proto", version = "0.1.1" }
protobuf = "2.15"

# for reading/writing from/to Kafka in the data generator
rdkafka = { version = "0.24", features = ["cmake-build"] }
tokio = { version = "0.2", features = ["full"] }
structopt = "0.3.5"
rand = "0.7"
futures = "0.3"
