[package]
name = "statefun-greeter-example-proto"
version = "0.1.1"
authors = ["Aljoscha Krettek <aljoscha.krettek@gmail.com>"]
readme = "../README.md"
edition = "2018"
license = "MIT"

description = "Protobuf definitions for the Statefun Rust Greeter example"

documentation = "https://docs.rs/statefun/"
homepage = "https://github.com/aljoscha/statefun-rust"
repository = "https://github.com/aljoscha/statefun-rust.git"

[dependencies]
protobuf = "2.15"

[build-dependencies]
protoc-rust = "2.15"
glob = "0.3"
