[package]
name = "statefun-proto"
version = "0.1.0"
authors = ["Aljoscha Krettek <aljoscha.krettek@gmail.com>"]
readme = "../README.md"
edition = "2018"
license = "MIT"

description = "Protobuf definitions for the Statefun Rust SDK"

documentation = "https://docs.rs/statefun/"
homepage = "https://github.com/aljoscha/statefun-rust"
repository = "https://github.com/aljoscha/statefun-rust.git"

[dependencies]
protobuf = "2.15"

[build-dependencies]
protoc-rust = "2.15"
glob = "0.3"
