[package]
name = "statefun-scratch"
version = "0.1.0"
authors = ["Aljoscha Krettek <aljoscha.krettek@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
exitfailure = "0.5.1"
structopt = "0.3.5"
log = "0.4.8"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
bytes = "0.5"
prost = "0.6"
prost-types = "0.6"
statefun-protos = { path = "../statefun-protos" }
statefun-scratch-protos = { path = "../statefun-scratch-protos" }
