[package]
name = "statefun"
version = "0.1.1"
authors = ["Aljoscha Krettek <aljoscha.krettek@gmail.com>"]
readme = "../README.md"
edition = "2018"
license = "MIT"

description = "A Rust SDK for the Apache Flink Stateful Functions (StateFun) project. See: https://flink.apache.org/stateful-functions.html"

documentation = "https://docs.rs/statefun/"
homepage = "https://github.com/aljoscha/statefun-rust"
repository = "https://github.com/aljoscha/statefun-rust.git"

[dependencies]
thiserror = "1.0"
log = "0.4.8"
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
bytes = "0.5"
protobuf = "2.15"
statefun-proto = { path = "../statefun-proto", version = "0.1.1" }

[dev-dependencies]
anyhow = "1.0"
